--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
     android:background="@drawable/bg_home"
+    android:padding="8dp"
     tools:context=".home.HomeFragment">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,38 +17,100 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnCari"
+        <TextView
+            android:id="@+id/tv_text_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/poin_kamu"
+            android:textColor="#A39696"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/point_user"
+            android:textColor="#458CAD"
+            android:padding="4dp"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/tv_text_point"
+            app:layout_constraintStart_toStartOf="@+id/tv_text_point"
+            app:layout_constraintTop_toBottomOf="@+id/tv_text_point" />
+
+        <TextView
+            android:id="@+id/tv_hi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/hi"
+            android:textColor="#A39696"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="8dp"
+            android:text="@string/nama_user"
+            android:textColor="#A39696"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_hi"
+            app:layout_constraintStart_toEndOf="@+id/tv_hi"
+            app:layout_constraintTop_toTopOf="@+id/tv_hi" />
+
+        <TextView
+            android:id="@+id/tv_greeting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/apa_kabar"
+            android:textColor="#A39696"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/tv_hi"
+            app:layout_constraintTop_toBottomOf="@+id/tv_hi" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:background="@drawable/bg_search"
+            android:clickable="true"
+            android:focusable="true"
             android:fontFamily="@font/poppins"
             android:padding="16dp"
-            android:text="Mau mencuci dimana hari ini ?"
+            android:text="@string/cuci_dimana"
             android:textColor="#A39696"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
+            app:rippleColor="@color/bluePrimary" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
+            android:id="@+id/layout_promotion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="#ABEDD8"
-            android:padding="24dp"
+            android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnCari">
+            app:layout_constraintTop_toBottomOf="@+id/btn_search">
 
             <ImageView
-                android:id="@+id/img_promo1"
+                android:id="@+id/img_promotion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/img_promo"
@@ -60,18 +123,20 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout3"
+            android:id="@+id/layout_advertisement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="16dp"
             android:background="#ABEDD8"
-            android:padding="24dp"
+            android:padding="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll1">
+            app:layout_constraintTop_toBottomOf="@+id/layout_menu">
 
             <ImageView
-                android:id="@+id/img_promo2"
+                android:id="@+id/img_advertisement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/img_promo"
@@ -84,25 +149,28 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-            android:id="@+id/ll1"
+            android:id="@+id/layout_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="24dp"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+            android:weightSum="4"
+            app:layout_constraintEnd_toEndOf="@+id/layout_promotion"
+            app:layout_constraintStart_toStartOf="@+id/layout_promotion"
+            app:layout_constraintTop_toBottomOf="@+id/layout_promotion">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/card1"
-                android:layout_width="90dp"
+                android:id="@+id/btn_service"
+                android:layout_width="80dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
                 app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                app:cardElevation="5dp"
+                app:rippleColor="@color/bluePrimary">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -120,7 +188,7 @@
                         tools:ignore="ContentDescription" />
 
                     <TextView
-                        android:id="@+id/tv_layanan"
+                        android:id="@+id/tv_service"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -132,31 +200,34 @@
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/img_vespa"
                         app:layout_constraintStart_toStartOf="@+id/img_vespa"
-                        app:layout_constraintTop_toBottomOf="@+id/img_vespa"
-                        tools:ignore="SmallSp" />
+                        app:layout_constraintTop_toBottomOf="@+id/img_vespa" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/card2"
-                android:layout_width="90dp"
+                android:id="@+id/btn_rating"
+                android:layout_width="80dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="8dp"
+                android:layout_marginVertical="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
                 app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                app:cardElevation="5dp"
+                app:rippleColor="@color/bluePrimary">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="16dp">
+                    android:layout_height="match_parent">
 
                     <ImageView
                         android:id="@+id/img_jempol"
-                        android:layout_width="50dp"
-                        android:layout_height="40dp"
-                        android:layout_marginTop="3dp"
+                        android:layout_width="40dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="8dp"
                         android:background="@drawable/ic_jempol"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +235,7 @@
                         tools:ignore="ContentDescription" />
 
                     <TextView
-                        android:id="@+id/tv_teratas"
+                        android:id="@+id/tv_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -176,27 +247,30 @@
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/img_jempol"
-                        tools:ignore="SmallSp" />
+                        app:layout_constraintTop_toBottomOf="@+id/img_jempol" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/card3"
-                android:layout_width="90dp"
+                android:id="@+id/btn_location"
+                android:layout_width="80dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
                 app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                app:cardElevation="5dp"
+                app:rippleColor="@color/bluePrimary">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/img_peta"
+                        android:id="@+id/img_map"
                         android:layout_width="50dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
@@ -207,7 +281,7 @@
                         tools:ignore="ContentDescription" />
 
                     <TextView
-                        android:id="@+id/tv_terdekat"
+                        android:id="@+id/tv_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -217,21 +291,25 @@
                         android:textColor="#458CAD"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/img_peta"
-                        app:layout_constraintStart_toStartOf="@+id/img_peta"
-                        app:layout_constraintTop_toBottomOf="@+id/img_peta"
-                        tools:ignore="SmallSp" />
+                        app:layout_constraintEnd_toEndOf="@+id/img_map"
+                        app:layout_constraintStart_toStartOf="@+id/img_map"
+                        app:layout_constraintTop_toBottomOf="@+id/img_map" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/card4"
-                android:layout_width="90dp"
+                android:id="@+id/btn_voucher"
+                android:layout_width="80dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginHorizontal="8dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
                 app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                app:cardElevation="5dp"
+                app:rippleColor="@color/bluePrimary">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -261,8 +339,7 @@
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/img_voucher"
                         app:layout_constraintStart_toStartOf="@+id/img_voucher"
-                        app:layout_constraintTop_toBottomOf="@+id/img_voucher"
-                        tools:ignore="SmallSp" />
+                        app:layout_constraintTop_toBottomOf="@+id/img_voucher" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
