--- a/app/src/main/res/layout/activity_pelayanan.xml
+++ b/app/src/main/res/layout/activity_pelayanan.xml
@@ -14,8 +14,8 @@
 
         <ImageButton
             android:id="@+id/btn_back"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_alignParentStart="true"
             android:background="@drawable/ic_arrow_back"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_position">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -87,7 +87,7 @@
         </RelativeLayout>
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/sp_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -104,7 +104,7 @@
         <!--        app:layout_constraintEnd_toEndOf="parent"-->
         <!--        app:layout_constraintHorizontal_bias="0.491"-->
         <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toBottomOf="@+id/spinner">-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/sp_category">-->
 
         <!--        <androidx.recyclerview.widget.RecyclerView-->
         <!--            android:id="@+id/rv_location"-->
@@ -120,10 +120,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:paddingHorizontal="16dp"
             android:scrollbars="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner"
+            app:layout_constraintTop_toBottomOf="@+id/sp_category"
             tools:listitem="@layout/item_tempat" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
