--- a/app/src/main/res/layout/item_tempat.xml
+++ b/app/src/main/res/layout/item_tempat.xml
@@ -42,6 +42,7 @@
                 android:layout_alignParentStart="true"
                 android:fontFamily="@font/poppins"
                 android:padding="4dp"
+                android:layout_marginStart="12dp"
                 android:text="@string/jaya_makmur_wash"
                 android:textColor="@color/white"
                 android:textSize="14sp"
@@ -54,6 +55,7 @@
                 android:layout_below="@id/tv_name"
                 android:layout_alignParentStart="true"
                 android:fontFamily="@font/poppins"
+                android:layout_marginStart="12dp"
                 android:padding="4dp"
                 android:text="@string/jl_mt_haryono"
                 android:textColor="@color/white"
