fix payment layout

--- a/app/src/main/res/layout/activity_fix_payment.xml
+++ b/app/src/main/res/layout/activity_fix_payment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#3D84A8"
-    tools:context=".home.pembayaran.PembayaranActivity3">
+    tools:context=".home.pembayaran.FixPaymentActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -344,6 +344,7 @@
                     android:layout_width="240dp"
                     android:layout_height="90dp"
                     android:layout_marginTop="32dp"
+                    android:visibility="visible"
                     android:background="@drawable/bg_kode"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -366,7 +367,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/tv_code"
+                        android:id="@+id/tv_code_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
